# back-end/routes/auth.js
@@ -5,6 +5,9 @@ const userService = require('../services/user.service');
 
 router.post('/register', async (req, res, next) => {
     /*  
+    #swagger.tags = ['Authentication']
+    #swagger.summary = 'Register a User'
+    #swagger.description = 'Register a new User'
     #swagger.parameters['user'] = {
             in: 'body',
             description: 'The User to be registered',
@@ -15,9 +18,6 @@ router.post('/register', async (req, res, next) => {
                 $lastname: 'Doe'
             }
     } 
-    #swagger.tags = ['Authentication']
-    #swagger.summary = 'Register a User'
-    #swagger.description = 'Register a new User'
     #swagger.responses[200] =             
         description: 'The User to be registered',
         schema: {
@@ -38,44 +38,7 @@ router.post('/register', async (req, res, next) => {
     await userService.registerUser(req, res, next);
 });
 
-router.post('/validate', (req, res, next) => {
-    /*  
-    #swagger.parameters['code'] = {
-            in: 'body',
-            description: 'The validation code',
-            schema: {
-            $email: 'email@domain.com',
-            $code: '*****'
-        }
-    } 
-    #swagger.tags = ['Authentication']
-    #swagger.summary = 'Validate a User'
-    #swagger.description = 'Validate a new User'
-    */
-    const { email, code } = request.body;
-    res.setHeader('Content-Type', 'application/json')
-    res.json({'message': 'messages'});
-});
-
-router.post('/forgot', (req, res, next) => {
-    /*  
-    #swagger.parameters['forgot'] = {
-            in: 'body',
-            description: 'The email of the disabled account',
-            schema: {
-            $email: 'email@domain.com'
-        }
-    } 
-    #swagger.tags = ['Authentication']
-    #swagger.summary = 'Forgot a Password'
-    #swagger.description = 'Forgot a Password'
-    */
-    const { password } = request.body;
-    res.setHeader('Content-Type', 'application/json')
-    res.json({'message': 'messages'});
-});
-
-router.post('/login', (req, res, next) => {
+router.post('/login', async (req, res, next) => {
     /*  
     #swagger.parameters['login'] = {
             in: 'body',
@@ -89,9 +52,7 @@ router.post('/login', (req, res, next) => {
     #swagger.summary = 'Login a User'
     #swagger.description = 'Login a User'
     */
-    const { email, password } = request.body;
-    res.setHeader('Content-Type', 'application/x-www-form-urlencoded')
-    res.json({'message': 'messages'});
+    await userService.loginUser(req, res, next);
 });
 
 module.exports = router;
