# back-end/services/user.model.js
@@ -1,4 +1,5 @@
 const mongoose = require('mongoose');
+const bcrypt = require('bcryptjs');
 
 const Schema = mongoose.Schema;
 
@@ -7,9 +8,45 @@ const userSchema = new Schema(
     email: {type: String, required: true},
     password: {type: String, required: true},
     firstname: {type: String, required: true},
-    lastname: {type: String, required: true}
+    lastname: {type: String, required: true},
+    isActive: {type: Boolean, default: false}
   }
 );
+
+/** encryption */
+userSchema.pre("save", function (next) {
+  const user = this
+
+  if (this.isModified("password") || this.isNew) {
+    bcrypt.genSalt(10, function (saltError, salt) {
+      if (saltError) {
+        return next(saltError)
+      } else {
+        bcrypt.hash(user.password, salt, function(hashError, hash) {
+          if (hashError) {
+            return next(hashError)
+          }
+
+          user.password = hash
+          next()
+        })
+      }
+    })
+  } else {
+    return next()
+  }
+});
+
+/** compare password */
+userSchema.methods.comparePassword = function(password, callback) {
+  bcrypt.compare(password, this.password, function(error, isMatch) {
+    if (error) {
+      return callback(error)
+    } else {
+      callback(null, isMatch)
+    }
+  })
+};
 
 const User = mongoose.model('User', userSchema);
 
